--- a/templates/home_alt.html
+++ b/templates/home_alt.html
@@ -17,27 +17,109 @@
             }
         </style>
     </head>
+
     <div class="container">
+        <form action="/" method="post">
+            <div>
+                <label for="Departure City">Choose a departure city:</label>
+                <select id="Dept_City" name="Departure City">
+                    <option value="None"> </option>\n
+                    {% for city in city_lst %}
+                        <option value="{{city['City']}}">{{city['City']}}</option>
+                    {% endfor %}
+                </select><br>
+                <label for="Departure Airport">Choose a departure airport:</label>
+                <select id="Dept_Airport" name="Departure Airport">
+                    <option value="None"> </option>\n
+                    {% for airport in airport_lst %}
+                        <option value="{{airport['Airport_name']}}">{{airport['Airport_name']}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <div>
+                <label for="Arrival City">Choose an Arrival city</label>
+                <select id="Arri_City" name="Arrival City">
+                    <option value="None"> </option>
+                    {% for city in city_lst %}
+                        <option value="{{city['City']}}">{{city['City']}}</option>
+                    {% endfor %}
+                </select><br>
+                <label for="Arrival Airport">Choose an Arrival airport:</label>
+                <select id="Arri_Airport" name="Arrival Airport">
+                    <option value="None"> </option>\n
+                    {% for airport in airport_lst %}
+                        <option value="{{airport['Airport_name']}}">{{airport['Airport_name']}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <div>
+                <label for="Departure Date">Enter a departure date (YYYY/MM/DD):</label>
+                <input type="text" id="Dept_Date" name="Departure Date"><br>
+                <label for="Passenger Count">Enter the number of passengers:</label>
+                <input type="text" id="Passenger_Count" name="Passenger Count"><br>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+
+
+
+
+
+
+    <!-- <div class="container">
         <div>
             <form action="/update_content/Index/Dept_City" method="post">
             <label for="Departure City">Choose a departure city:</label>
             <select id="Dept_City" name="Departure City">
                 <option value="None"> </option>\n
-                {city_pulldown_msg}
-            </select>
+                {% for city in city_lst %}
+                    <option value="{{city['City']}}">{{city['City']}}</option>
+                {% endfor %}
+            </select><br>
+            <form action="/update_content/Index/Dept_Airport" method="post">
+                <label for="Departure Airport">Choose a departure airport:</label>
+                <select id="Dept_Airport" name="Departure Airport">
+                    <option value="None"> </option>\n
+                    {% for airport in airport_lst %}
+                        <option value="{{airport['Airport_name']}}">{{airport['Airport_name']}}</option>
+                    {% endfor %}
+                </select>
             </form>
         </div>
         <div>
             <form action="/update_content/Index/Arri_City" method="post">
             <label for="Arrival City">Choose an Arrival city</label>
             <select id="Arri_City" name="Arrival City">
-                <option value="None"> </option>\n
-                {city_pulldown_msg}
-            </select>
+                <option value="None"> </option>
+                {% for city in city_lst %}
+                    <option value="{{city['City']}}">{{city['City']}}</option>
+                {% endfor %}
+            </select><br>
+            <form action="/update_content/Index/Arri_Airport" method="post">
+                <label for="Arrival Airport">Choose an Arrival airport:</label>
+                <select id="Arri_Airport" name="Arrival Airport">
+                    <option value="None"> </option>\n
+                    {% for airport in airport_lst %}
+                        <option value="{{airport['Airport_name']}}">{{airport['Airport_name']}}</option>
+                    {% endfor %}
+                </select>
             </form>
-        </div>
+        </div> -->
+
+    <div style="position: absolute; top: 3; right: 0;">
+        <form action="/signin" method="post">
+            {{login_status}} <br>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username"><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password"><br>
+            <button type="submit">Sign In</button>
+            <button type="submit" formaction="/register">Register</button>
+        </form>
     </div>
-    <button type="submit">Submit</button>
 
     <table border="1">
         <tr>
@@ -51,7 +133,28 @@
             <th>Arrival Airport</th>
             <th>Arrival City</th>
         </tr>
-            {msg}
+        {% for flight in flights %}
+        <tr>
+        <td> {{ flight['IATA_code'] }}{{ "%03d" | format(flight['flight_num']) }} </td>
+        <td> {{ flight['Departure_time'] }} </td>
+        <td> {{ flight['Arrival_time'] }} </td>
+        {% if flight['status_now'] == 'completed' %}
+            <td  style="color: grey;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'cancelled' %}
+            <td  style="color: red;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'upcoming' %}
+            <td  style="color: black;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'delayed' %}
+            <td  style="color: orange;"> {{ flight['status_now'] }} </td>
+        {% else %}
+            <td  style="color: green;"> {{ flight['status_now'] }} </td>
+        {% endif %}
+        <td> {{ flight['remaining_seats'] }} </td>
+        <td> {{ flight['Departure_Airport'] }} </td>
+        <td> {{flight['Dept_City']}} </td>
+        <td> {{flight['Arrival_Airport']}} </td>
+        <td> {{flight['Arri_City']}} </td>
+        </tr>
+        {% endfor %}
     </table>
-    
 </html>
