--- a/templates/home.html
+++ b/templates/home.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        DEBUG
-    </head>
-    <table border="1">
-        <tr>
-            <th>Airline</th>
-            <th>Number</th>
-            <th>Departure Time</th>
-            <th>Arrival Time</th>
-            <th>Status</th>
-            <th>Departure Airport</th>
-            <th>Arrival Airport</th>
-        </tr>
-{% for flight in data %}
-        <tr>
-            <td>{{flight.Airline_name}}</td>
-            <td>{{flight.flight_num}}</td>
-            <td>{{flight.Departure_time}}</td>
-            <td>{{flight.Arrival_time}}</td>
-            <td>{{flight.status}}</td>
-            <td>{{flight.Departure_Airport}}</td>
-            <td>{{flight.Arrival_Airport}}</td>
-        </tr>
-{% endfor %}
-    </table>
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+</head>
+<body>
+    <h1>Welcome to the Home Page</h1>
+    {% if session.logged_in %}
+        <p>Hello, {{ session.username }}!</p>
+        <a href="{{ url_for('logout') }}">Logout</a>
+    {% else %}
+        <a href="{{ url_for('login') }}">Login</a>
+        <a href="{{ url_for('register') }}">Register</a>
+    {% endif %}
+</body>
 </html>
+
