--- a/templates/reg_agent.html
+++ b/templates/reg_agent.html
@@ -10,15 +10,11 @@
     <h1>Register</h1>
     <form action="{{ url_for('register') }}" method="post">
         <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" required><br>
+        <input type="text" id="username" name="username" value="{{ request.form['username'] }}" required><br>
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
-        <label for="role" name="role">Role:</label><br>
-        <select id="role" name="role">
-            <option value="Customer">Customer</option>
-            <option value="Agent">Booking Agent</option>
-            <option value="Staff">Airline Staff</option>
-        </select><br>
+        <input type="password" id="password" name="password" value="{{ request.form['password'] }}" required><br>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" value="{{ request.form['email'] }}" required><br>
         <input type="submit" value="Register">
     </form>
 </body>
