--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="font-family:cursive">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
-<body>
+<body style="font-family:Arial, Helvetica, sans-serif">
     <h1>Login</h1>
     <form action="{{ url_for('login') }}" method="post">
         <label for="username">Username:</label><br>
