--- a/templates/reg_agent.html
+++ b/templates/reg_agent.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="font-family:cursive">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
-<body>
+<body style="font-family:Arial, Helvetica, sans-serif">
     <h1>Register</h1>
-    <form action="{{ url_for('register') }}" method="post">
+    <form action="{{ url_for('reg_agent') }}" method="post">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" value="{{ request.form['username'] }}" required><br>
         <label for="password">Password:</label><br>
