--- a/templates/reg_staff.html
+++ b/templates/reg_staff.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="font-family:cursive">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
-<body>
+<body style="font-family:Arial, Helvetica, sans-serif">
     <h1>Register</h1>
-    <form action="{{ url_for('register') }}" method="post">
+    <form action="{{ url_for('reg_staff') }}" method="post">
         <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" value="{{ request.form['username'] }}" required><br>
+        <input type="text" id="username" name="username" value="{{ username }}" required><br>
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" value="{{ request.form['password'] }}" required><br>
+        <input type="password" id="password" name="password" value="{{ password }}" required><br>
         <label for="first_name">First Name:</label><br>
         <input type="text" id="first_name" name="first_name" value="{{ request.form['first_name'] }}" required><br>
         <label for="last_name">Last Name:</label><br>
