--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
-<body>
+<body style="font-family:Arial, Helvetica, sans-serif">
     <h1>Register</h1>
     <form action="{{ url_for('register') }}" method="post">
         <label for="username">Username:</label><br>
