implementing sql stuff

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,16 @@
 </head>
 <body style="font-family:Arial, Helvetica, sans-serif">
     <h1>Login</h1>
+    <script>
+        {% if msg[0]==True %}
+            alert('{{ msg[1] }}');
+        {% endif %}
+    </script>
     <form action="{{ url_for('login') }}" method="post">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br>
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br>
+        <input type="password" id="password" name="password" required><br>
         <input type="submit" value="Login">
     </form>
 </body>
