--- a/templates/search_flights.html
+++ b/templates/search_flights.html
@@ -9,24 +9,48 @@
 
 <body style="font-family:Arial, Helvetica, sans-serif">
     <h1>Search Flights</h1>
-    <script>
-        {% if error[0]==True %}
+    {% if error[0]==True %}
+        <script>
             alert('{{ error[1] }}');
-        {% endif %}
-    </script>
+        </script>
+    {% endif %}
     <form method="post">
         <label for="departure_airport">Departure Airport:</label>
-        <input type="text" id="departure_airport" name="departure_airport">
+        <select name="departure_airport" id="departure_airport" value="{{ request.form['departure_airport'] }}">
+            <option value="None"> </option>
+            {% for airport in airport_lst %}
+                <option value="{{ airport }}">{{ airport }}</option>
+            {% endfor %}
+        </select>
+
         <label for="departure_city">Departure City:</label>
-        <input type="text" id="departure_city" name="departure_city"><br>
+        <select name="departure_city" id="departure_city">
+            <option value="None"> </option>
+        {% for city in city_lst %}
+                <option value="{{ city }}">{{ city }}</option>
+        {% endfor %}
+        </select>
+
         <label for="arrival_airport">Arrival Airport:</label>
-        <input type="text" id="arrival_airport" name="arrival_airport">
+        <select name="arrival_airport" id="arrival_airport">
+            <option value="None"> </option>
+        {% for airport in airport_lst %}
+            <option value="{{ airport }}">{{ airport }}</option>
+        {% endfor %}
+        </select>
+
         <label for="arrival_city">Arrival City:</label>
-        <input type="text" id="arrival_city" name="arrival_city"><br>
+        <select name="arrival_city" id="arrival_city">
+            <option value="None"> </option>
+        {% for city in city_lst %}
+                <option value="{{ city }}">{{ city }}</option>
+        {% endfor %}
+        </select><br>
+
         <label for="departure_date_from">Departure Date from:</label>
-        <input type="date" id="departure_date_from" name="departure_date_from" >
+        <input type="date" id="departure_date_from" name="departure_date_from" value="{{ request.form['departure_date_from'] }}">
         <label for="departure_date_to"> to:</label>
-        <input type="date" id="departure_date_to" name="departure_date_to"><br>
+        <input type="date" id="departure_date_to" name="departure_date_to" value="{{ request.form['departure_date_to'] }}"><br>
         <input type="submit" value="Search" name="Search">
     </form>
     {% if not session.logged_in %}
@@ -42,17 +66,29 @@
             <th>Arrival Airport</th>
             <th>Arrival City</th>
         </tr>
+        {% for flight in flights %}
         <tr>
-            <td>Flight 1</td>
-            <td>12:00</td>
-            <td>14:00</td>
-            <td>On Time</td>
-            <td>100</td>
-            <td>YYZ</td>
-            <td>Toronto</td>
-            <td>LAX</td>
-            <td>Los Angeles</td>
+        <td> {{ flight['IATA_code'] }}{{ "%03d" | format(flight['flight_num']) }} </td>
+        <td> {{ flight['Departure_time'] }} </td>
+        <td> {{ flight['Arrival_time'] }} </td>
+        {% if flight['status_now'] == 'completed' %}
+            <td  style="color: grey;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'cancelled' %}
+            <td  style="color: red;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'upcoming' %}
+            <td  style="color: black;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'delayed' %}
+            <td  style="color: orange;"> {{ flight['status_now'] }} </td>
+        {% else %}
+            <td  style="color: green;"> {{ flight['status_now'] }} </td>
+        {% endif %}
+        <td> {{ flight['remaining_seats'] }} </td>
+        <td> {{ flight['Departure_Airport'] }} </td>
+        <td> {{flight['Departure_city']}} </td>
+        <td> {{flight['Arrival_Airport']}} </td>
+        <td> {{flight['Arrival_city']}} </td>
         </tr>
+        {% endfor %}
 
     </table>
     {% elif session.role == 'Customer' %}
@@ -68,17 +104,29 @@
             <th>Arrival Airport</th>
             <th>Arrival City</th>
         </tr>
+        {% for flight in flights %}
         <tr>
-            <td>Flight 1</td>
-            <td>12:00</td>
-            <td>14:00</td>
-            <td>On Time</td>
-            <td>100</td>
-            <td>YYZ</td>
-            <td>Toronto</td>
-            <td>LAX</td>
-            <td>Los Angeles</td>
+        <td> {{ flight['IATA_code'] }}{{ "%03d" | format(flight['flight_num']) }} </td>
+        <td> {{ flight['Departure_time'] }} </td>
+        <td> {{ flight['Arrival_time'] }} </td>
+        {% if flight['status_now'] == 'completed' %}
+            <td  style="color: grey;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'cancelled' %}
+            <td  style="color: red;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'upcoming' %}
+            <td  style="color: black;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'delayed' %}
+            <td  style="color: orange;"> {{ flight['status_now'] }} </td>
+        {% else %}
+            <td  style="color: green;"> {{ flight['status_now'] }} </td>
+        {% endif %}
+        <td> {{ flight['remaining_seats'] }} </td>
+        <td> {{ flight['Departure_Airport'] }} </td>
+        <td> {{flight['Departure_city']}} </td>
+        <td> {{flight['Arrival_Airport']}} </td>
+        <td> {{flight['Arrival_city']}} </td>
         </tr>
+        {% endfor %}
     </table>
 
     <form method="POST">
@@ -100,20 +148,32 @@
             <th>Arrival Airport</th>
             <th>Arrival City</th>
         </tr>
+        {% for flight in flights %}
         <tr>
-            <td>Flight 1</td>
-            <td>12:00</td>
-            <td>14:00</td>
-            <td>On Time</td>
-            <td>100</td>
-            <td>YYZ</td>
-            <td>Toronto</td>
-            <td>LAX</td>
-            <td>Los Angeles</td>
+        <td> {{ flight['IATA_code'] }}{{ "%03d" | format(flight['flight_num']) }} </td>
+        <td> {{ flight['Departure_time'] }} </td>
+        <td> {{ flight['Arrival_time'] }} </td>
+        {% if flight['status_now'] == 'completed' %}
+            <td  style="color: grey;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'cancelled' %}
+            <td  style="color: red;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'upcoming' %}
+            <td  style="color: black;"> {{ flight['status_now'] }} </td>
+        {% elif flight['status_now'] == 'delayed' %}
+            <td  style="color: orange;"> {{ flight['status_now'] }} </td>
+        {% else %}
+            <td  style="color: green;"> {{ flight['status_now'] }} </td>
+        {% endif %}
+        <td> {{ flight['remaining_seats'] }} </td>
+        <td> {{ flight['Departure_Airport'] }} </td>
+        <td> {{flight['Departure_city']}} </td>
+        <td> {{flight['Arrival_Airport']}} </td>
+        <td> {{flight['Arrival_city']}} </td>
         </tr>
+        {% endfor %}
     </table>
 
-    <form action="{{ url_for('book_flights') }}" method="POST">
+    <form method="POST">
         <label for="flight_number">Book flight number: </label>
         <input type="text" id="flight_number" name="flight_number" required><br>
         <label for="Customer email:" >Customer email:</label>
